--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,13 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.js-list__img{
+  width: 100px;
+  height: 100px;
+
+  /* display: flex;
+  flex-direction: column; */
+
+
+}
