--- a/css/common.css
+++ b/css/common.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -23,12 +23,9 @@ button {
   cursor: pointer;
 }
 
-.js-list__img{
-  width: 100px;
-  height: 100px;
 
-  /* display: flex;
-  flex-direction: column; */
-
-
+.item__img {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
